<resources>
    <string name="app_name">AndroidLabs</string>
    <string name="hello_message">Hello World!</string>
    <string name="ButtonText">I\'m a button</string>
    <string name="login">login</string>
    <string name="loginName">login name</string>
    <string name="password">password</string>
    <string name="loginButton">Login</string>
    <string name="RB">RadioButton</string>
    <string name="CB">CheckBox</string>
    <string name="TB">What does this do?</string>
    <string name="dialog_message">Do you want to finish the activity?</string>
    <string name="dialog_title">Finish Activity</string>
    <string name="ok">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="reply">ListItemsActivity passe: </string>
    <string name="response">My information to share</string>
    <string name="switchOn">Switch is On</string>
    <string name="switchOff">Switch is Off</string>
    <string name="startChatButton">Start Chat</string>
    <string name="sendButton">Send</string>
    <string name="weatherButton">Weather</string>
    <string name="currentTempLabel">Current Temperature</string>
    <string name="maxTempLabel">Max Temperature</string>
    <string name="minTempLabel">Min Temperature</string>
    <string name="windLabel">Wind Speed</string>
    <string name="deleteMessage">Delete this message</string>
    <string name="messageDetails">Message Here</string>
    <string name="messageID">ID = </string>
    <string name="title_activity_test_toolbar">TestToolbar</string>
    <string name="toolbarDialogTitle">Do you want to go back?</string>
    <string name="hint">New alert message for menu one</string>
    <string name="dialogPositive">OK</string>
    <string name="dialogNegative">Cancel</string>
    <string name="toolBarButton">TEST TOOLBAR</string>
    <string name="aboutMenu">About</string>
    <string name="aboutInformation">Version 1.0, by Chenxiao Cui</string>
    <string name="snackbarMessage">You selected item 1.</string>


</resources>
