<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:columnCount="2"
    android:rowCount="2"
    tools:context="com.example.chenxiao.androidlabs.ListItemsActivity"
    android:layout_gravity="fill">

    <RadioButton
        android:id="@+id/radioButton"
        android:layout_width="163dp"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="0"
        android:text="@string/RB" />

    <CheckBox
        android:id="@+id/checkBox3"
        android:layout_width="173dp"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="0"
        android:text="@string/CB" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="1"
        android:text="@string/TB" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="178dp"
        android:layout_height="34dp"
        android:layout_column="1"
        android:layout_row="1"
        android:src="@android:drawable/ic_menu_camera" />

</GridLayout>
